@@ -156,6 +156,7 @@ public class EntryEditorTab {
             }
             else {
                 ta = new FieldTextArea(fields[i], null);
+                frame.searchManager.addSearchListener((FieldTextArea)ta);
                 defaultHeight = ta.getPane().getPreferredSize().height;
             }
             //ta.addUndoableEditListener(bPanel.undoListener);
